# outtahere

./: .gitignore  CMakeLists.txt  Makefile.simple  README.md  TODO.md  install_deps.sh  oldcmake.txt  outtahere  test_basic.c
.cache/clangd/index/: game.c.B899097574BDFF58.idx  game.h.B96DA77BB1B8E120.idx  main.c.ED4FC7348AD7DD72.idx  map.c.CB120665A2466908.idx  map.h.4330062DD5C914FE.idx  player.c.50A642911B644D42.idx  player.h.CA35AB887EA0C76C.idx  tile.c.399E384EC8077AC1.idx  tile.h.F4B5DBF67ED723D9.idx
assets/: outtahere.tiled-session  outtahere.tmx  tileset.tsx
assets/maps/: level1.tmx
assets/tilemap/: Sprites.tsx  demo.tmx  level2.tmx  outtahere.tiled-session  outtahere.tmx  tileset.tsx
include/: anim.h  camera.h  game.h  map.h  menu.h  physics.h  player.h  polygon_collision.h  tile.h  tilemap.h
src/: anim.c  camera.c  game.c  main.c  map.c  menu.c  physics.c  player.c  polygon_collision.c  tile.c  tilemap.c  tilemap.h  tmx.c  tmx.h
